<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.newsappneetroots.ui.bbc.HomeFragment"
        android:label="@string/bbc"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.newsappneetroots.ui.aljazeera.GalleryFragment"
        android:label="@string/aljazeera"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.newsappneetroots.ui.cnn.SlideshowFragment"
        android:label="@string/cnn"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/indiaTodayNewsFragment"
        android:name="com.example.newsappneetroots.fragment.IndiaTodayNewsFragment"
        android:label="@string/indiatoday"
        tools:layout="@layout/fragment_india_today_news" />
    <fragment
        android:id="@+id/skyNewsFragment"
        android:name="com.example.newsappneetroots.fragment.SkyNewsFragment"
        android:label="@string/skynews"
        tools:layout="@layout/fragment_sky_news" />
</navigation>